[package]
name = "catmark"
version = "0.2.1"
authors = [ "Xavier Bestel <xavier.bestel@free.fr>" ]
license = "GPL-3.0"
description = "Console printer for CommonMark"
repository = "https://github.com/bestouff/catmark"

[dependencies]
pulldown-cmark = "0.1"
ansi_term = "0.10"
term_size = "0.3"
syntect = "1.8"
unicode-segmentation = "1.1"
unicode-width = "0.1"
html2runes = { git = "https://github.com/Ruin0x11/html2runes" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "catmark"
path = "src/main.rs"