[package]
name = "catmark"
version = "0.2.2"
authors = [ "Xavier Bestel <xavier.bestel@free.fr>" ]
license = "GPL-3.0"
description = "Console printer for CommonMark"
repository = "https://github.com/bestouff/catmark"

[dependencies]
pulldown-cmark = "0.1"
ansi_term = "0.11"
term_size = "0.3"
syntect = "2.0"
unicode-segmentation = "1.1"
unicode-width = "0.1"
