[package]
name = "catmark"
version = "0.2.2"
authors = ["Xavier Bestel <xavier.bestel@free.fr>"]
license = "GPL-3.0"
description = "Console printer for CommonMark"
repository = "https://github.com/bestouff/catmark"
edition = "2021"

[dependencies]
pulldown-cmark = "0.13"
nu-ansi-term = "0.50"
terminal_size = "0.4"
syntect = "5.3"
unicode-segmentation = "1.12"
unicode-width = "0.2"
newtype-ops = "0.1"
